...
import com.github.warnastrophy.core.model.HazardsDataService
import com.github.warnastrophy.core.util.formatDate
import kotlin.collections.get
import kotlin.rem

object LatestNewsTestTags {
  const val HEADER_ROW = "latestNewsHeader"
  const val HEADER_TITLE = "latestNewsHeaderTitle"
  const val HEADER_TIMESTAMP = "latestNewsHeaderTimestamp"
  const val HEADLINE = "latestNewsHeadline"
  const val BODY = "latestNewsBody"
  const val IMAGE_BOX = "latestNewsImage"

  const val RIGHT_BUTTON = "latestNewsCardRightButton"

  const val LEFT_BUTTON = "latestNewsCardLeftButton"

  const val LINK = "latestNewsLink"

  const val LATEST_NEWS_CARD = "latestNewsCard"
}

object LatestNewsCardColors {
  val BORDER_COLOR: Color = Color(0xFFBDBDBD) // Shadow Grey
...
                          maxLines = 2,
                          overflow = TextOverflow.Ellipsis)

                      Spacer(modifier = Modifier.height(8.dp))
                      if (hazards.isNotEmpty()) {
                        Text(
                            text = "read",
                            color = LatestNewsCardColors.READ_ARTICLE_TEXT_COLOR,
                            fontSize = 16.sp,
                            textDecoration = TextDecoration.Underline,
                            modifier =
                                Modifier.clickable {
                                      val intent =
...
