...
import com.github.warnastrophy.R
import com.github.warnastrophy.core.ui.theme.extendedColors

object HealthCardPopUpTestTags {
  const val ROOT_CARD = "healthCardRootCard"
  const val TITLE = "healthCardTitle"
  const val EDIT_BUTTON = "healthCardEditButton"
  const val CONTENT_CARD = "healthCardContentCard"
  const val EMPTY_STATE_TEXT = "healthCardEmptyStateText"

  // Fields titles
  const val FULL_NAME_TITLE = "FullNameTitle"
  const val BIRTH_DATE_TITLE = "BirthDateTitle"
...
